--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -7,11 +7,18 @@
 <p>To use the account, you will log on using your email address (to which this email has been sent, as well as a password.
 When you activate your account by clicking on the link below, you'll be prompted to set a password. Please call the office if
 you encounter any difficulty in getting logged in.</p>
-<p>After activating your account, be sure to bookmark your MySSP page. The link below becomes inactive after it has been used.</p>
+
 <p>To start using the Information Center, please click on the link below now.</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
+<p>After activating your account, you will use this url to activate your MySSP page: <%= link_to 'myssp.sierraserviceproject.net', myssp.sierraserviceproject.net %></p>
+
 <p>Finally, the system is experiencing an error at times when the web page is first launched. If you get an error when attempting
  to access the system that says "We are sorry, but something has gone wrong", please refresh your screen. If this
-doesn't solve the problem, please call our office at 916-488-6441. We are working on getting this fixed.</p>
+doesn't solve the problem, please call our office at 916-488-6441.</p>
+
+<p>Thank you for your cooperation as we launch this new system! Many blessings,</p>
+<p>Meghan Osborn, Business Manager<br/>Sierra Service Project<br/>PO Box 992<br/>Carmichael CA 95609<br/>916-488-6441
+<br/><%= link_to 'www.sierraserviceproject.org', www.sierraserviceproject.org %></p>
+
