Update to format of confirmation/invitation email.

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -12,7 +12,8 @@ you encounter any difficulty in getting logged in.</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
-<p>After activating your account, you will use this url to activate your MySSP page: <%= link_to 'myssp.sierraserviceproject.net', myssp.sierraserviceproject.net %></p>
+<p>After activating your account, you will use this url to activate your MySSP page:
+  <a href ="http://sierraserviceproject.org/">Sierra Service Project</a></p>
 
 <p>Finally, the system is experiencing an error at times when the web page is first launched. If you get an error when attempting
  to access the system that says "We are sorry, but something has gone wrong", please refresh your screen. If this
@@ -20,5 +21,5 @@ doesn't solve the problem, please call our office at 916-488-6441.</p>
 
 <p>Thank you for your cooperation as we launch this new system! Many blessings,</p>
 <p>Meghan Osborn, Business Manager<br/>Sierra Service Project<br/>PO Box 992<br/>Carmichael CA 95609<br/>916-488-6441
-<br/><%= link_to 'www.sierraserviceproject.org', www.sierraserviceproject.org %></p>
+<br/><a href ="http://sierraserviceproject.org/">Sierra Service Project</a></p>
 
