--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,7 +4,7 @@
   manage your interaction with SSP. This is meant for your convenience, but not as a replacement for picking up the
   phone and calling us when you need to.</p>
 
-<p>To use the account, you will log on using your email address (to which this email has been sent, as well as a password.
+<p>To use the account, you will log on using your email address (to which this email has been sent), as well as a password.
 When you activate your account by clicking on the link below, you'll be prompted to set a password. Please call the office if
 you encounter any difficulty in getting logged in.</p>
 
@@ -13,7 +13,7 @@ you encounter any difficulty in getting logged in.</p>
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
 <p>After activating your account, you will use this url to activate your MySSP page:
-  <a href ="http://sierraserviceproject.org/">Sierra Service Project</a></p>
+  <a href ="http://myssp.sierraserviceproject.net">MySSP</a></p>
 
 <p>Finally, the system is experiencing an error at times when the web page is first launched. If you get an error when attempting
  to access the system that says "We are sorry, but something has gone wrong", please refresh your screen. If this
@@ -21,5 +21,5 @@ doesn't solve the problem, please call our office at 916-488-6441.</p>
 
 <p>Thank you for your cooperation as we launch this new system! Many blessings,</p>
 <p>Meghan Osborn, Business Manager<br/>Sierra Service Project<br/>PO Box 992<br/>Carmichael CA 95609<br/>916-488-6441
-<br/><a href ="http://sierraserviceproject.org/">Sierra Service Project</a></p>
+<br/><a href ="http://sierraserviceproject.org/">www.sierraserviceproject.org</a></p>
 
