--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
     <%= stylesheet_link_tag :all, 'formtastic', 'my_formtastic_changes' %>
