--- a/app/views/roster_item/new.html.erb
+++ b/app/views/roster_item/new.html.erb
@@ -50,6 +50,11 @@
                                   <td><%= r.label "Shirt Size" %></td>
                                   <td><%= r.select :shirt_size, options_for_select(@size_list) %></td>
                                 </tr>
+                                <tr>
+                                  <td><%= r.label "Special Needs" %></td>
+                                  <td><%= r.select :special_need,
+                                                   options_for_select(SpecialNeed.all.sort_by{|s| s.list_priority}.map{|s| s.name}) %></td>
+                                </tr>
                                 <% if signed_in? && current_admin_user.admin? %>
                                   <tr>
                                     <td><%= r.label "Disclosure Status" %></td>
