--- a/app/views/scheduled_groups/invoice.html.erb
+++ b/app/views/scheduled_groups/invoice.html.erb
@@ -71,6 +71,12 @@
                            <td><%= number_to_currency(@screen_info[:invoice_data][:final_payment_amount]) %></td>
                        </tr>
                        <tr>
+                            <td>Net Adjustments</td>
+                            <td></td>
+                            <td></td>
+                            <td><%= number_to_currency(@screen_info[:invoice_data][:adjustment_total]) %></td>
+                       </tr>
+                       <tr>
                            <td>Total</td>
                            <td></td>
                            <td></td>
@@ -100,13 +106,7 @@
                            <td><%= number_to_currency(@screen_info[:invoice_data][:final_late_payment_amount]) %></td>
                          </tr>
                        <% end %>
-                       <tr>
-                           <td>Less Adjustments</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:adjustment_total]) %></td>
-                       </tr>
-                       <tr>
+                        <tr>
                            <td>Balance Due</td>
                            <td></td>
                            <td></td>
