--- a/app/views/layouts/admin_layout_alt.html.erb
+++ b/app/views/layouts/admin_layout_alt.html.erb
@@ -5,15 +5,9 @@
     <%= favicon_link_tag %>
 
     <%= render 'layouts/stylesheets' %>
-
+    <%= javascript_include_tag 'application' %>
     <script src = https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js></script>
-
-    <!--<%= javascript_include_tag 'jquery.js' %>-->
-    <!--<%= javascript_include_tag 'jquery-ui.js' %>-->
-    <!--<%= javascript_include_tag '01.js' %>-->
-    <%= javascript_include_tag :all %>
-
-  </head>
+</head>
   <body class = logged_in>
   <div class="wrapper">
 	<%= render 'layouts/header' %>
