--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
 
-    <!--<%= render 'layouts/stylesheets' %>-->
+    <!--<%#= render 'layouts/stylesheets' %>-->
         <%= stylesheet_link_tag "application" %>
 
   </head>
