--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -24,7 +24,7 @@ h2, h3 {
 /*<<<<<<< HEAD*/
   /*background-color: #5c91aa; }*/
 /*=======*/
-  background-color: #1b3664; }
+  background-color: #4D7194; }
 /*>>>>>>> upstream/master*/
 
 /*#header h1 {*/
@@ -96,7 +96,7 @@ h2, h3 {
   color: white; }
 
 #main-nav ul li.selected {
-  background-color: #d1e0e7;
+  background-color: #4D7194;
   border-top-left-radius: 10px;
   -moz-border-radius-top-left: 10px;
   -webkit-border-top-left-radius: 10px;
