--- a/app/assets/stylesheets/active_admin.css
+++ b/app/assets/stylesheets/active_admin.css
@@ -321,11 +321,11 @@ th, td, caption {
         background: #4D7194;
         color: #fff; }
       #header ul#tabs > li.has_nested > a {
-        background: url("/active_admin/nested_menu_arrow.gif") no-repeat 89% 50%;
+        background: image-url("/active_admin/nested_menu_arrow.gif") no-repeat 89% 50%;
         padding-right: 20px;
         z-index: 1050; }
       #header ul#tabs > li.has_nested.current > a {
-        background: #4D7194 url("/active_admin/nested_menu_arrow_dark.gif") no-repeat 89% 50%;
+        background: #4D7194 image-url("/active_admin/nested_menu_arrow_dark.gif") no-repeat 89% 50%;
         padding-right: 20px; }
       #header ul#tabs > li:hover > a {
         background: #4D7194;
@@ -341,7 +341,7 @@ th, td, caption {
         -webkit-border-top-right-radius: 10px;
         -webkit-border-top-left-radius: 10px;
         border-bottom: 5px solid #4D7194;
-        background: #4D7194 url("/active_admin/nested_menu_arrow_dark.gif") no-repeat 89% 50%; }
+        background: #4D7194 image-url("/active_admin/nested_menu_arrow_dark.gif") no-repeat 89% 50%; }
       #header ul#tabs > li:hover ul {
         display: block; }
       #header ul#tabs > li ul {
@@ -813,7 +813,7 @@ form.filter_form .filter_form_field {
     text-align: center;
     width: 12px; }
   form.filter_form .filter_form_field.filter_date_range input[type=text] {
-    background: white url("active_admin/datepicker/datepicker-input-icon.png") no-repeat 100% 7px;
+    background: white image-url("active_admin/datepicker/datepicker-input-icon.png") no-repeat 100% 7px;
     padding-right: 27px;
     width: 71px; }
 form.filter_form a.clear_filters_btn {
@@ -1004,13 +1004,13 @@ body.logged_out .flash {
   padding: 0;
   text-align: center;
   width: 160px;
-  background: url("active_admin/datepicker/datepicker-nipple.png") no-repeat 0 -40px; }
+  background: image-url("active_admin/datepicker/datepicker-nipple.png") no-repeat 0 -40px; }
   .ui-datepicker a {
     text-decoration: none; }
     .ui-datepicker a:hover {
       cursor: pointer; }
   .ui-datepicker .ui-datepicker-header {
-    background: url("active_admin/datepicker/datepicker-header-bg.png") no-repeat 0px 0px;
+    background: image-url("active_admin/datepicker/datepicker-header-bg.png") no-repeat 0px 0px;
     height: 12px;
     padding: 16px 7px 8px;
     position: relative;
@@ -1031,10 +1031,10 @@ body.logged_out .flash {
       width: 20px; }
       .ui-datepicker .ui-datepicker-header a.ui-datepicker-prev {
         float: left;
-        background: url("active_admin/datepicker/datepicker-prev-link-icon.png") no-repeat 2px 5px; }
+        background: image-url("active_admin/datepicker/datepicker-prev-link-icon.png") no-repeat 2px 5px; }
       .ui-datepicker .ui-datepicker-header a.ui-datepicker-next {
         float: right;
-        background: url("active_admin/datepicker/datepicker-next-link-icon.png") no-repeat 12px 5px; }
+        background: image-url("active_admin/datepicker/datepicker-next-link-icon.png") no-repeat 12px 5px; }
       .ui-datepicker .ui-datepicker-header a:active {
         margin-top: -3px;
         height: 18px; }
@@ -1144,7 +1144,7 @@ table.index_table {
       display: block;
       white-space: nowrap; }
     table.index_table th.sortable a {
-      background: url("active_admin/orderable.png") no-repeat 0 4px;
+      background: image-url("active_admin/orderable.png") no-repeat 0 4px;
       padding-left: 13px; }
     table.index_table th.sorted-asc a {
       background-position: 0 -27px; }
@@ -2449,7 +2449,7 @@ table.index_table th a, table.index_table th a:link, table.index_table th a:visi
     text-decoration: none;
     display: block; }
 table.index_table th.sortable a {
-    background: url("active_admin/orderable.png") no-repeat 0 4px;
+    background: image-url("active_admin/orderable.png") no-repeat 0 4px;
     padding-left: 13px; }
 table.index_table th.sorted-asc a {
     background-position: 0 -27px; }
@@ -2792,14 +2792,14 @@ body.logged_in .flash {
     top: 0px;
 }
 table.index_table th a.sortable {
-    background: url("active_admin/orderable.png") no-repeat 0 4px;
+    background: image-url("active_admin/orderable.png") no-repeat 0 4px;
     padding-left: 13px; }
 table.index_table th a.sorted-asc {
-    background: url("active_admin/orderable.png") no-repeat 0 4px;
+    background: image-url("active_admin/orderable.png") no-repeat 0 4px;
     background-position: 0 -27px;
     padding-left: 13px;}
 table.index_table th a.sorted-desc {
-    background: url("active_admin/orderable.png") no-repeat 0 4px;
+    background: image-url("active_admin/orderable.png") no-repeat 0 4px;
     background-position: 0 -56px;
     padding-left: 13px;}
 table.index_table th.sorted-asc, table.index_table th.sorted-desc {
