--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
     <%= csrf_meta_tag %>
 
     <!--<%#= render 'layouts/stylesheets' %>-->
-        <%= stylesheet_link_tag "application" %>
-
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "application" %>
   </head>
 	<body>
 		<div class="container">
@@ -22,6 +22,4 @@
         <%= debug(params) if Rails.env.development? %>
 		</div>
 	</body>
-
-  <%= javascript_include_tag 'application' %>
 </html>
