--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title id="title"><%= title %></title>
     <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
     <%= stylesheet_link_tag "application" %>
