Work on excluding prior scheduled groups from view.

--- a/app/views/liaisons/show.html.erb
+++ b/app/views/liaisons/show.html.erb
@@ -49,14 +49,14 @@
                                 <td><%= g.requested_total %></td>
                                 <td><%= g.created_at.strftime("%m/%d/%y") %></td>
                             </tr>
-                        <!--<% end %>-->
+                        <% end %>
                         </tbody>
                     </table>
                 </div>
             </div>
 <!--Current Schedule Section -->
             <div class="panel">
-                <h3>Current Schedule Group Information</h3>
+                <h3>Current Scheduled Group Information</h3>
                 <div class="panel_contents">
                     <table id="scheduled_group_info" border="0" cellspacing="0" cellpadding="0">
                         <thead>
@@ -121,7 +121,6 @@
                     <!--<tr><td>Home Phone</td><td><%= @screen_info[:liaison].home_phone %></td></tr>-->
                     <!--<tr><td>Fax</td><td><%= @screen_info[:liaison].fax %></td></tr>-->
                   <!--</table>-->
-<!-->>>>>>> upstream/master-->
                 </div>
               </div>
           <% end %>
@@ -129,71 +128,7 @@
 
     <% end %>
     <!--Current Schedule Section -->
-<div class="panel">
-  <% if can? :edit, @screen_info[:liaison] %>
-    <h3>Current Schedule Group Information</h3>
-  <% else %>
-      <h3>Current Schedule Group Information - be sure to pay attention when there are multiple groups!</h3>
-  <% end %>
-    <div class="panel_contents">
-        <table border="0" cellspacing="0" cellpadding="0">
-            <thead>
-                <tr>
-                    <th>Group Name</th>
-                    <th>Youth</th>
-                    <th>Couns</th>
-                    <th>Total</th>
-                    <th>Site</th>
-                    <th>Week</th>
-                    <th>Participant Info</th>
-                    <% if can? :edit, @screen_info[:liaison] %>
-                      <th>Balance</th>
-                      <th>Payment</th>
-                      <% if can? :create, Adjustment %><th>Adjust</th><% end %>
-                    <% end %>
-                </tr>
-            </thead><% i = 0 %>
-            <tbody><% @screen_info[:group_info].each do |g| %>
-                <tr>
-                    <td>
-                      <% if can? :edit, g %>
-                        <%= link_to g.name, edit_scheduled_group_path(g.id),
-                             :title => 'Click to make changes to this group'%>
-                      <% else %>
-                        <%= g.name %>
-                      <% end %>
-                    </td>
-                    <td><%= g.current_youth %></td>
-                    <td><%= g.current_counselors %></td>
-                    <td><%= g.current_total %></td>
-                    <td><% s = Session.find(g.session_id)%><%= link_to Site.find(s.site_id).name, sched_program_session_path(:id => @screen_info[:liaison].id,
-                        :session => g.session_id),:title => "Click to see what other groups are coming to this site at this week." %></td>
-                    <td><%= link_to Period.find(s.period_id).name, "#",
-                                    :title => "Starts on #{Period.find(s.period_id).start_date.strftime("%m/%d/%y")
-                                    } and ends on #{Period.find(s.period_id).end_date.strftime("%m/%d/%y")}" %></td>
-                    <td>
-                      <% if can? :edit, g %>
-                          <%= link_to "Update Roster", show_roster_path(g.roster_id),
-                                    :title => "Click to update the participant rosters." %></td>
-                      <% else %>
-                          <%= link_to "View Roster", show_roster_path(g.roster_id) %>
-                      <% end %>
-                    </td>
-                    <% if can? :edit, g %>
-                        <td><%= link_to number_to_currency(@screen_info[:invoice_info][i][:current_balance]),
-                                    invoice_path(g.id), :title => "Click to review and print your current invoice." %></td>
-                        <td><%= link_to "Make Payment", record_payment_path(:group_id => g.id),
-                                    :title => "Click to record payment. Eventually to be replaced by payment gateway." %></td>
-                        <% if can? :create, Adjustment %>
-                            <td><%= link_to "Adjustment", make_adjustment_path(g.id),
-                                  :title => "Click to make an adjustment (new church discount, scholarship, etc)." %></td>
-                        <% else %>
-                            <td></td>
-                        <% end %>
-                    <% end %>
-                    <% i += 1 %>
-                </tr>
-            <% end %></tbody>
+
         </table>
     </div>
 </div>
