--- a/app/views/liaisons/show.html.erb
+++ b/app/views/liaisons/show.html.erb
@@ -200,7 +200,7 @@
                     <div class="attributes_table liaison" id="attributes_table_liaison">
                         <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
-                                <th>Name</th>
+                                <td>Name</td>
                                 <td><%= @screen_info[:liaison].name %></td>
                             </tr>
                             <tr>
