--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -24,9 +24,9 @@ input[type="submit"]:focus, input[type="button"]:focus {
 .clear { clear:both; }
 
 #reg_container {
-    background: none;
+    background: url('container.png') no-repeat;
     width: 754px;
-    height: 500px;
+    /*height: 500px;*/
     margin: 20px auto;
     padding: 50px 0;
     overflow: hidden;
@@ -36,22 +36,28 @@ input[type="submit"]:focus, input[type="button"]:focus {
     #reg_container #first_step, #second_step, #third_step, #fourth_step, #fifth_step, #sixth_step, #seventh_step, #eighth_step {
         display: none;
     }
-    #reg_container #first_step { display: block; }
+    #reg_container #second_step { display: block; }
 
     #reg_container .form { margin: 66px 72px 0 72px;}
 
     #reg_container h1, #reg_container h2 {
         font-type: Cantarell, Verdana, san-serif;
         text-align: center;
-        font-size: 24;
+        font-size: 24px;
         text-shadow: 1px 1px 2px #222;
     }
 
     #reg_container h2 {
         font-type: Cantarell, Verdana, san-serif;
         text-align: left;
-        font-size: 14;
+        font-size: 14px;
         font-weight: bold;
+    }
+    #reg_container p {
+        font-type: Cantarell, Verdana, san-serif;
+        text-align: left;
+        font-size: 12px;
+        font-weight: normal;
     }
 
     #reg_container table {
@@ -67,15 +73,32 @@ input[type="submit"]:focus, input[type="button"]:focus {
                 color: #a90329;
             }
 
-    #reg_container input, #reg_container select {
-        background: none;
+    #reg_container input {
+        background: url("input.png");
         color: #888;
         border: 1px solid #ccc;
         font-family: Cantarell, Verdana, sans-serif;
-        font-weight: bold;
-        font-size: 15px;
+        font-weight: normal;
+        font-size: 14px;
+        width: 20px;
+        height: 15px;
+        padding: 100 25px;
+        margin: 20px 0;
+        float: left;
+        text-align: right;
+        border-radius: 6px;
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+    }
+    #reg_container select {
+        background: url("input.png");
+        color: #888;
+        border: 1px solid #ccc;
+        font-family: Cantarell, Verdana, sans-serif;
+        font-weight: normal;
+        font-size: 14px;
         width: 300px;
-        height: 35px;
+        height: 30px;
         padding: 0 25px;
         margin: 20px 0;
         float: left;
@@ -84,6 +107,78 @@ input[type="submit"]:focus, input[type="button"]:focus {
         -webkit-border-radius: 6px;
     }
 
+        .reg_buttons {
+            background: url("button.png") no-repeat;
+            border: none;
+            cursor: pointer;
+            width: 85px;
+            height: 38px;
+            position: relative;
+            bottom: -20px;
+            left: 650px;
+        }
+            #reg_container input.submit.focus { border: none;}
 
+        #reg_container input.send{ background: url("send.png");}
 
+        #reg_container input.error {border: 1px solid red; }
+        #reg_container input.valid {border: 1px solid #1FFF00; }
 
+        #reg_container input:focus, #reg_container select:focus {
+            border: 1px solid #a90329;
+            color: #a90329;
+        }
+
+    #reg_container select { padding: 5px 0 5px 25px;}
+        #reg_container option { padding: 0 15px;}
+
+    #reg_container label {
+        color: #666;
+        font-size: 12px;
+        font-weight: bold;
+        line-height: 14px;
+        float: left;
+        margin: 23px -25px 10px 10px;
+        width: 150px;
+    }
+
+    #progress_bar {
+        background: url("progress_bar.png") no-repeat;
+        width: 399px;
+        height: 24px;
+        margin: 0 auto;
+        position: relative;
+    }
+
+    #progress {
+        background: url("progress.png") repeat-x;
+        width: 0px;
+        height: 23px;
+
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+    }
+
+    #progress_text {
+        position: relative;
+        line-height: 21px;
+        text-align: center;
+        font-weight: bold;
+        color: green;
+        width: 339;
+        height: 24px;
+        top: -20px;
+        left: 0;
+    }
+
+    .form_elements {
+        margin-left: 220px;
+        margin-top: 40px;
+    }
+    #id_requested_total {
+        padding-left: 12px;
+    }
+    #session_select {
+        display: none;
+    }
