--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -3,10 +3,10 @@
         <h4><%= link_to "Help with scheduling a group", "#" %></h4>
         <p>This online system has been set up for your convenience. If you run into problems, don't hesitate to pick up the phone and call Meghan at 916-488-6441 during normal business hours. Alternatively, send her an email at meghan.osborn@sierraserviceproject.org.</p>
         <div id='reg_container'>
-          <!--<form action="#" method="post">-->
+          <form action="#" method="post">
           <%=  form_for @registration do |r| %>
             <div id="first_step">
-              <h5>Step 1: Confirm Church Information</h5>
+              <h1>Step 1: Confirm Church Information</h1>
                 <div class="form">
                     <p>Below is the information on file for you and your church.
                     If any of this needs to be updated, please cancel this registration process, update your liaison and church information, and then start registering again.</p>
@@ -20,59 +20,86 @@
                       <tr><td>Your Church</td><td><%= @liaison.church.name %></td></tr>
                       <tr><td>City</td><td><%= @liaison.church.city %></td></tr>
                       <tr><td>State</td><td><%= @liaison.church.state %></td></tr>
-
                     </table>
                 </div>
-                <input class="submit" type="submit" name="submit_first" id="submit_first" value="" />
-                <input class="submit" type="submit" name="cancel_first" id="cancel_first" value="" />
+              <div class="clear"></div>
+              <div class="reg_buttons" id="submit_first">
+                  <img width="85" height="38" src="/assets/button.png" alt="Next">
+              </div>
             </div>
-            <div class="clear"></div>
+
 
             <div id="second_step">
-              <h5>Step 2: Select Group Type</h5>
-              <%= r.radio_button :group_type_id, SessionType.find_by_name('Senior High'), :checked => true %>
-              <%= r.label :group_type_id_senior_high, 'Senior High' %>
-              <%= r.radio_button :group_type_id, 'Junior High', :value => SessionType.find_by_name('Junior High')%>
-              <%= r.label :group_type_id_junior_high, 'Junior High' %>
-              <input class="submit" type="submit" name="submit_second" id="submit_second" value="" />
-              <input class="submit" type="submit" name="cancel_second" id="cancel_second" value="" />
+              <h1>Step 2: Select Group Type</h1>
+              <div class="form_elements">
+              <div class="form">
+                <p>Select the type of group you are registering.</p>
+                <%= radio_button_tag(:group_type, SessionType.find_by_name('Summer Senior High').id) %>
+                <%= label_tag(:group_senior, "Senior High") %>
+                <%= radio_button_tag(:group_type, SessionType.find_by_name('Summer Junior High').id) %>
+                <%= label_tag(:group_junior, "Junior High") %>
+              </div>
+              </div>
+              <div class="clear"></div>
+
+              <div class="reg_buttons" id="submit_second">
+                <img width="85" height="38" src="/assets/button.png" alt="Next">
+              </div>
             </div>
             <div class="clear"></div>
 
             <div id="third_step">
-              <h5>Step 3: Enter Enrollment Numbers</h5>
-              <tr>
-                <td><%= r.label "Youth" %></td>
-                <td><%= r.number_field :requested_youth, :min => 1, :size => 2, :max => 25 %></td>
-              </tr>              <tr>
-                <td><%= r.label "Counselors" %></td>
-                <td><%= r.number_field :requested_counselors, :min => 1, :size => 2, :max => 8 %></td>
-              </tr>
-              <input class="submit" type="submit" name="submit_third" id="submit_third" value="" />
-              <input class="submit" type="submit" name="back_third" id="back_third" value="" />
-              <input class="submit" type="submit" name="cancel_third" id="cancel_third" value="" />
+              <h1>Step 3: Enter Enrollment Numbers</h1>
+                    <div class="form">
+                        <div id='limit_info'></div>
+                   <table class='registration_table'>
+                    <tr>
+                        <td><%= r.label "Youth" %></td>
+                        <td><%= r.number_field :requested_youth, :min => 1, :size => 2, :max => 25 %></td>
+                    </tr>
+                    <tr>
+                        <td><%= r.label "Counselors" %></td>
+                        <td><%= r.number_field :requested_counselors, :min => 1, :size => 2, :max => 8 %></td>
+                    </tr>
+                     <tr>
+                        <td>Total Requested</td>
+                        <td id="requested_total"></td>
+                    </tr>
+                  </table>
+              </div>
+
+            <div class="clear"></div>
+            <div class="reg_buttons" id="submit_third">
+              <img width="85" height="38" src="/assets/button.png" alt="Next">
+            </div>
             </div>
             <div class="clear"></div>
 
             <div id="fourth_step">
-              <h5>Step 4: Select First Choice Site and Week</h5>
+              <h1>Step 4: Select First Choice Site and Week</h1>
+              <div class="form">
+                <div id='site_info'></div>
+                <table>
+
               <tr>
                 <td><%= r.label "Site" %></td>
-                <td id="site_selection"><%= select 'site', 'site_id', Site.all.collect {|s| [s.name, s.id]}, {:include_blank => false} %></td>
+                <td id="site_selection"><%= select 'site', 'site_id', Site.all.collect {|s| [s.name, s.id]},  {:prompt => "Select one", :include_blank => false} %></td>
               </tr>
-              <tr>
+              <tr id="session_select"  >
                 <td><%= r.label "Session" %></td>
-                <!--<td id="session_selection"><%= select "Session", "session_id", Session.find_all_by_site_id_and_session_type_id(1, 1).collect {|s| [s.period.name, s.id]}, {:include_blank => false} %></td>-->
-                <td id="session_selection"><%= select "Session", "session_id", Session.where('site_id = ? AND session_type_id = ?', 5, 2).collect {|s| [s.period.name, s.id]}, {:include_blank => false} %></td>
+                <td id="session_selection"><%= select "Session", "session_id", Session.where('site_id = ? AND session_type_id = ?', 5, 2).map {|s| [s.period.name, s.id]}, :include_blank => false %></td>
               </tr>
-              <input class="submit" type="submit" name="submit_fourth" id="submit_fourth" value="" />
-              <input class="submit" type="submit" name="back_fourth" id="back_fourth" value="" />
-              <input class="submit" type="submit" name="cancel_fourth" id="cancel_fourth" value="" />
-            </div>
-            <div class="clear"></div>
+              </table>
+                </div>
+                <div class="clear"></div>
+                <div class="reg_buttons" id="submit_fourth">
+                  <img width="85" height="38" src="/assets/button.png" alt="Next">
+                </div>
+                </div>
+                <div class="clear"></div>
 
             <div id="fifth_step">
-              <h5>Step 5: Select Additional Choices</h5>
+              <h1>Step 5: Select Additional Choices</h1>
               <p>We strongly urge you to select at least two alternative site/session combinations. Although we do are absolute best to schedule
               you at your first choice site and week, due to the popularity of certain times and locations, it is always possible. Please give us
               at least two other choices!</p>
@@ -85,14 +112,14 @@
                 <!--<td id="session_selection"><%= select "Session", "session_id", Session.find_all_by_site_id_and_session_type_id(1, 1).collect {|s| [s.period.name, s.id]}, {:include_blank => false} %></td>-->
                 <td id="alt_session_selection"><%= select "Session", "session_id", Session.where('site_id = ? AND session_type_id = ?', 5, 2).collect {|s| [s.period.name, s.id]}, {:include_blank => false} %></td>
               </tr>
-              <input class="submit" type="submit" name="submit_fourth" id="submit_fifth" value="" />
-              <input class="submit" type="submit" name="back_fourth" id="back_fifth" value="" />
-              <input class="submit" type="submit" name="cancel_fourth" id="cancel_fifth" value="" />
+              <input class="submit" type="submit" name="submit_fourth" id="submit_fifth" value="" label='Submit'/>
+              <!--<input class="submit" type="submit" name="back_fourth" id="back_fifth" value="" abel/>-->
+              <!--<input class="submit" type="submit" name="cancel_fourth" id="cancel_fifth" value="" />-->
             </div>
             <div class="clear"></div>
 
             <div id="sixth_step">
-              <h5>Step 6: Confirm Registration</h5>
+              <h1>Step 6: Confirm Registration</h1>
               <p>Please review this information for accuracy. Use the 'back' button if you want to change anything before submitting.</p>
               <table class= 'registration_table' id="registration_request_table">
                 <tr><td>Youth</td><td><%= @registration.requested_youth%></td></tr>
@@ -101,19 +128,19 @@
                 <tr><td>First Choice</td><td><%= "Site: #{} Week: #{}" %></td></tr>
 <!--Need to know the number of choices and iterate through each-->
                 <input class="submit" type="submit" name="submit_fourth" id="submit_sixth" value="" />
-                <input class="submit" type="submit" name="back_fourth" id="back_sixth" value="" />
-                <input class="submit" type="submit" name="cancel_fourth" id="cancel_sixth" value="" />
+                <!--<input class="submit" type="submit" name="back_fourth" id="back_sixth" value="" />-->
+                <!--<input class="submit" type="submit" name="cancel_fourth" id="cancel_sixth" value="" />-->
               </table>
             </div>
             <div class="clear"></div>
 
             <div id="seventh_step">
-              <h5>Step 7: Make Payment</h5>
+              <h1>Step 7: Make Payment</h1>
             </div>
             <div id="eighth_step">
-              <h5>Step 8: Registration Complete!</h5>
+              <h1>Step 8: Registration Complete!</h1>
             </div>
-          <!--</form>-->
+          </form>
           <% end %>
         </div>
         <div id="progress_bar">
